--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "prettier-plugin-tailwindcss": "^0.5.11",
     "prop-types": "^15.8.1",
     "storybook": "^7.6.17",
+    "storybook-addon-react-router-v6": "^2.0.11",
     "tailwindcss": "^3.4.1",
     "vite": "^5.1.4"
   }
