--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "storybook": "^7.6.17",
     "storybook-addon-react-router-v6": "^2.0.11",
     "tailwindcss": "^3.4.1",
+    "uuid": "^9.0.1",
     "vite": "^5.1.5"
   }
 }
