--- a/package.json
+++ b/package.json
@@ -13,47 +13,50 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
-    "@tanstack/react-query": "^5.28.0",
-    "pocketbase": "^0.21.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/material": "^5.15.15",
+    "@tanstack/react-query": "^5.32.0",
+    "pocketbase": "^0.21.2",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.4",
-    "react-router-dom": "^6.22.3",
+    "react-router-dom": "^6.23.0",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
-    "@storybook/addon-essentials": "^7.6.17",
-    "@storybook/addon-interactions": "^7.6.17",
-    "@storybook/addon-links": "^7.6.17",
+    "@storybook/addon-essentials": "^7.6.18",
+    "@storybook/addon-interactions": "^7.6.18",
+    "@storybook/addon-links": "^7.6.18",
     "@storybook/addon-onboarding": "1.0.11",
-    "@storybook/blocks": "^7.6.17",
-    "@storybook/react": "^7.6.17",
-    "@storybook/react-vite": "^7.6.17",
-    "@storybook/test": "^7.6.17",
-    "@types/react": "^18.2.65",
-    "@types/react-dom": "^18.2.22",
+    "@storybook/blocks": "^7.6.18",
+    "@storybook/react": "^7.6.18",
+    "@storybook/react-vite": "^7.6.18",
+    "@storybook/test": "^7.6.18",
+    "@types/react": "^18.3.1",
+    "@types/react-dom": "^18.3.0",
     "@vheemstra/vite-plugin-imagemin": "^2.0.0",
     "@vitejs/plugin-react-swc": "^3.6.0",
-    "autoprefixer": "^10.4.18",
+    "autoprefixer": "^10.4.19",
     "eslint": "^8.57.0",
-    "eslint-plugin-react": "^7.34.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react": "^7.34.1",
+    "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.6",
     "eslint-plugin-storybook": "^0.8.0",
-    "framer-motion": "^11.0.12",
+    "framer-motion": "^11.1.7",
     "imagemin-gifsicle": "^7.0.0",
     "imagemin-mozjpeg": "^10.0.0",
     "imagemin-pngquant": "^9.0.2",
     "imagemin-svgo": "^10.0.1",
     "imagemin-webp": "^8.0.0",
-    "postcss": "^8.4.35",
+    "postcss": "^8.4.38",
     "prettier": "^3.2.5",
-    "prettier-plugin-tailwindcss": "^0.5.12",
+    "prettier-plugin-tailwindcss": "^0.5.14",
     "prop-types": "^15.8.1",
-    "storybook": "^7.6.17",
-    "storybook-addon-react-router-v6": "^2.0.12",
-    "tailwindcss": "^3.4.1",
+    "storybook": "^7.6.18",
+    "storybook-addon-react-router-v6": "^2.0.15",
+    "tailwindcss": "^3.4.3",
     "uuid": "^9.0.1",
-    "vite": "^5.1.6"
+    "vite": "^5.2.10"
   }
 }
