--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.12",
     "prop-types": "^15.8.1",
+    "react-intersection-observer": "^9.10.1",
     "storybook": "^7.6.17",
     "storybook-addon-react-router-v6": "^2.0.12",
     "tailwindcss": "^3.4.1",
