--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.5",
-    "react-router-dom": "^6.23.0",
-    "zustand": "^4.5.2"
+    "react-router-dom": "^6.23.0"
   },
   "devDependencies": {
     "@storybook/addon-essentials": "^7.6.19",
